Resolved Spring homework 5: resolved mentor's remarks